# qa-fork-1778684711-poetry_conflict_python_vs_tool

./: autotest_config.json  pyproject.toml
