[tool.poetry]
name = "test-poetry-conflict"
version = "0.1.0"
description = "Poetry conflict test"
authors = ["Test <test@example.com>"]


[tool.poetry.dependencies]
requests = "^2.31.0"
Django = "^4.2"  # or ^5.0 for the latest
flask = "^2.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
